# sports-dalrim

./: .gitignore  README.md  pyproject.toml
accounts/: README.MD
accounts_functions/: apps.py
config/: settings.py
