[tool.poetry]
name = "lemon-market"
version = "0.1.0"
description = ""
authors = ["LeeJiChan <jiclee@cuneo.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
